feat: 新增None模式，多数据源功能。 适用于不同mapper包，调用不同的数据源的场景

--- a/lamp-noneMultipleDataSources/lamp-noneMultipleDataSources-server/src/main/resources/application.yml
+++ b/lamp-noneMultipleDataSources/lamp-noneMultipleDataSources-server/src/main/resources/application.yml
@@ -25,7 +25,6 @@ spring:
     druid:
       master:
         enable: true
-        # 从这里开始(druid)，中间的这段配置用于 lamp.database.multiTenantType != DATASOURCE 时
         username: ${lamp.mysql.username}
         password: ${lamp.mysql.password}
         driver-class-name: ${lamp.mysql.driverClassName}
@@ -66,7 +65,6 @@ spring:
           login-password: lamp
       slave:
         enable: true
-        # 从这里开始(druid)，中间的这段配置用于 lamp.database.multiTenantType != DATASOURCE 时
         username: ${lamp.mysql.username}
         password: ${lamp.mysql.password}
         driver-class-name: ${lamp.mysql.driverClassName}
@@ -106,6 +104,25 @@ spring:
           login-username: lamp
           login-password: lamp
 
+
+mybatis-plus-master:
+  mapper-locations:
+    - classpath*:mapper_**/**/*Mapper.xml
+  #实体扫描，多个package用逗号或者分号分隔
+  typeAliasesPackage: com.tangyh.lamp.*.entity;com.tangyh.basic.database.mybatis.typehandler
+  typeEnumsPackage: com.tangyh.lamp.*.enumeration
+  global-config:
+    db-config:
+      id-type: INPUT
+      insert-strategy: NOT_NULL
+      update-strategy: NOT_NULL
+      select-strategy: NOT_EMPTY
+  configuration:
+    #配置返回数据库(column下划线命名&&返回java实体是驼峰命名)，自动匹配无需as（没开启这个，SQL需要写as： select user_id as userId）
+    map-underscore-to-camel-case: true
+    cache-enabled: false
+    #配置JdbcTypeForNull, oracle数据库必须配置
+    jdbc-type-for-null: 'null'
 
 
 mybatis-plus-slave:
