--- a/lamp-demo/lamp-demo-biz/pom.xml
+++ b/lamp-demo/lamp-demo-biz/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>lamp-demo</artifactId>
         <groupId>com.tangyh.lamp</groupId>
-        <version>3.2.1-SNAPSHOT</version>
+        <version>3.2.1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -35,7 +35,7 @@
         </dependency>
         <dependency>
             <groupId>com.tangyh.basic</groupId>
-            <artifactId>lamp-boot</artifactId>
+            <artifactId>lamp-boot-util</artifactId>
         </dependency>
 
         <dependency>
