--- a/lamp-demo/lamp-demo-server/pom.xml
+++ b/lamp-demo/lamp-demo-server/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>lamp-demo</artifactId>
         <groupId>com.tangyh.lamp</groupId>
-        <version>3.2.1-SNAPSHOT</version>
+        <version>3.2.1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -15,11 +15,6 @@
     <description>演示服务启动模块</description>
 
     <dependencies>
-        <dependency>
-            <groupId>com.tangyh.lamp</groupId>
-            <artifactId>lamp-tenant-datasource-init</artifactId>
-            <version>${lamp-project.version}</version>
-        </dependency>
         <dependency>
             <groupId>com.tangyh.lamp</groupId>
             <artifactId>lamp-demo-controller</artifactId>
