--- a/lamp-example/lamp-example-server/pom.xml
+++ b/lamp-example/lamp-example-server/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>lamp-example</artifactId>
         <groupId>com.tangyh.lamp</groupId>
-        <version>3.2.1-SNAPSHOT</version>
+        <version>3.2.1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -18,12 +18,6 @@
         <dependency>
             <groupId>io.seata</groupId>
             <artifactId>seata-spring-boot-starter</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.tangyh.lamp</groupId>
-            <artifactId>lamp-tenant-datasource-init</artifactId>
-            <version>${lamp-project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.tangyh.lamp</groupId>
