--- a/lamp-example/pom.xml
+++ b/lamp-example/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.tangyh.lamp</groupId>
         <artifactId>lamp-examples</artifactId>
-        <version>3.2.1-SNAPSHOT</version>
+        <version>3.2.1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
