--- a/lamp-noneMultipleDataSources/lamp-noneMultipleDataSources-biz/pom.xml
+++ b/lamp-noneMultipleDataSources/lamp-noneMultipleDataSources-biz/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>lamp-noneMultipleDataSources</artifactId>
         <groupId>com.tangyh.lamp</groupId>
-        <version>3.2.1-SNAPSHOT</version>
+        <version>3.2.1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -43,7 +43,7 @@
         </dependency>
         <dependency>
             <groupId>com.tangyh.basic</groupId>
-            <artifactId>lamp-boot</artifactId>
+            <artifactId>lamp-boot-util</artifactId>
         </dependency>
 
         <dependency>
