--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.tangyh.lamp</groupId>
     <artifactId>lamp-examples</artifactId>
-    <version>3.2.1-SNAPSHOT</version>
+    <version>3.2.1</version>
     <packaging>pom</packaging>
     <url>https://gitee.com/zuihou111/lamp-cloud</url>
     <name>${project.artifactId}</name>
@@ -25,7 +25,7 @@
 
     <properties>
         <lamp-util.version>3.2.1</lamp-util.version>
-        <lamp-project.version>3.2.1-SNAPSHOT</lamp-project.version>
+        <lamp-project.version>3.2.1</lamp-project.version>
         <seata.version>1.3.0</seata.version>
         <!-- jdk8 将这里改成 8 -->
         <java.version>11</java.version>
@@ -68,7 +68,7 @@
             </dependency>
             <dependency>
                 <groupId>com.tangyh.basic</groupId>
-                <artifactId>lamp-boot</artifactId>
+                <artifactId>lamp-boot-util</artifactId>
                 <version>${lamp-util.version}</version>
             </dependency>
             <dependency>
