feat: 完善seata 示例

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>lamp-demo</module>
         <module>lamp-example</module>
         <module>lamp-noneMultipleDataSources</module>
+        <module>lamp-seata</module>
     </modules>
 
     <properties>
