--- a/lamp-seata/lamp-seata-at-producer-server/pom.xml
+++ b/lamp-seata/lamp-seata-at-producer-server/pom.xml
@@ -1,29 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://maven.apache.org/POM/4.0.0"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>lamp-example</artifactId>
+        <artifactId>lamp-seata</artifactId>
         <groupId>com.tangyh.lamp</groupId>
         <version>3.2.1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>lamp-example-server</artifactId>
+    <artifactId>lamp-seata-at-producer-server</artifactId>
     <name>${project.artifactId}</name>
-    <description>订单服务启动模块</description>
+    <description>seata at 模式 生产者</description>
 
     <dependencies>
         <dependency>
             <groupId>com.tangyh.lamp</groupId>
-            <artifactId>lamp-example-controller</artifactId>
+            <artifactId>lamp-common</artifactId>
             <version>${lamp-project.version}</version>
         </dependency>
-
         <dependency>
             <groupId>com.tangyh.basic</groupId>
             <artifactId>lamp-all</artifactId>
+        </dependency>
+
+        <!--为什么spring-cloud-starter-alibaba-seata 要将 seata-all 和 seata-spring-boot-starter 排除掉，然后在下面重新依赖呢？
+            因为： 随着 spring-cloud-starter-alibaba-seata 版本的升级， 里面seata-all、seata-spring-boot-starter的版本可能跟我们
+            使用的 seata-server 版本不一致，所以需要将手动指定这2个jar的版本跟 seata-server 保持一致。 -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-seata</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>io.seata</groupId>
+                    <artifactId>seata-all</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>io.seata</groupId>
+                    <artifactId>seata-spring-boot-starter</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>io.seata</groupId>
+            <artifactId>seata-all</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.seata</groupId>
+            <artifactId>seata-spring-boot-starter</artifactId>
         </dependency>
 
         <dependency>
@@ -31,6 +56,11 @@
             <artifactId>easypoi-spring-boot-starter</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -49,6 +79,7 @@
                     </execution>
                 </executions>
             </plugin>
+
             <!-- docker打包插件 -->
             <plugin>
                 <groupId>com.spotify</groupId>
@@ -62,7 +93,7 @@
                     </buildArgs>
                 </configuration>
             </plugin>
+
         </plugins>
     </build>
-
 </project>
