--- a/lamp-seata/lamp-seata-at-producer-server/src/main/java/com/tangyh/lamp/seata/controller/mysql-column.yml
+++ b/lamp-seata/lamp-seata-at-producer-server/src/main/java/com/tangyh/lamp/seata/controller/mysql-column.yml
@@ -1,19 +1,18 @@
-# 启动至少需要 1 + n 个库： lamp_defaults + lamp_base_{TENANT_CODE}
-# {TENANT_CODE} = d_tenant表的的code字段
-# n = d_tenant表的数据条数
+# 启动至少需要 1  个库： lamp_column
+# 并将 lamp_defaults.sql 和 lamp_column.sql 脚本导入 lamp_column 库
 
 lamp:
   mysql:
     ip: 127.0.0.1
     port: 3306
     driverClassName: com.mysql.cj.jdbc.Driver
-    database: lamp_defaults
+    database: lamp_column
     username: root
     password: root
     url: jdbc:mysql://${lamp.mysql.ip}:${lamp.mysql.port}/${lamp.mysql.database}?serverTimezone=CTT&characterEncoding=utf8&useUnicode=true&useSSL=false&autoReconnect=true&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
   database: # 字段介绍参考 DatabaseProperties
     tenantDatabasePrefix: lamp_base
-    multiTenantType: DATASOURCE
+    multiTenantType: COLUMN
     isNotWrite: false
     isBlockAttack: false
     isSeata: false
@@ -32,35 +31,34 @@ lamp:
 # mysql 通用配置
 spring:
   datasource:
-    dynamic:
-      enabled: false  # 这里一定要写成false， 是否开启根据 lamp.database.multiTenantType 来决定
-      p6spy: true
-      seata: ${lamp.database.isSeata:false}
-      druid:
-        initialSize: 10
-        minIdle: 10
-        maxActive: 500
-        max-wait: 60000
-        pool-prepared-statements: true
-        max-pool-prepared-statement-per-connection-size: 20
-        validation-query: SELECT 'x'
-        test-on-borrow: false
-        test-on-return: false
-        test-while-idle: true
-        time-between-eviction-runs-millis: 60000  #配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
-        min-evictable-idle-time-millis: 300000    #配置一个连接在池中最小生存的时间，单位是毫秒
-        filters: stat,wall
+    druid:
+      enable: true
+      # 从这里开始(druid)，中间的这段配置用于 lamp.database.multiTenantType != DATASOURCE 时
+      username: ${lamp.mysql.username}
+      password: ${lamp.mysql.password}
+      driver-class-name: ${lamp.mysql.driverClassName}
+      url: jdbc:mysql://${lamp.mysql.ip}:${lamp.mysql.port}/${lamp.mysql.database}?serverTimezone=CTT&characterEncoding=utf8&useUnicode=true&useSSL=false&autoReconnect=true&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
+      db-type: mysql
+      initialSize: 10
+      minIdle: 10
+      maxActive: 500
+      max-wait: 60000
+      pool-prepared-statements: true
+      max-pool-prepared-statement-per-connection-size: 20
+      validation-query: SELECT 'x'
+      test-on-borrow: false
+      test-on-return: false
+      test-while-idle: true
+      time-between-eviction-runs-millis: 60000  #配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
+      min-evictable-idle-time-millis: 300000    #配置一个连接在池中最小生存的时间，单位是毫秒
+      filters: stat,wall
+      filter:
         wall:
-          comment-allow: true
-          multiStatementAllow: true
-          noneBaseStatementAllow: true
-      datasource:
-        master:
-          username: ${lamp.mysql.username}
-          password: ${lamp.mysql.password}
-          driver-class-name: ${lamp.mysql.driverClassName}
-          url: jdbc:mysql://${lamp.mysql.ip}:${lamp.mysql.port}/${lamp.mysql.database}?serverTimezone=CTT&characterEncoding=utf8&useUnicode=true&useSSL=false&autoReconnect=true&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
-          db-type: mysql
+          enabled: true
+          config:
+            commentAllow: true
+            multiStatementAllow: true
+            noneBaseStatementAllow: true
       # 以下的2段配置，同时适用于所有模式
       web-stat-filter:  # WebStatFilter配置，说明请参考Druid Wiki，配置_配置WebStatFilter
         enabled: true
