--- a/lamp-seata/lamp-seata-at-consumer-server/src/main/resources/bootstrap.yml
+++ b/lamp-seata/lamp-seata-at-consumer-server/src/main/resources/bootstrap.yml
@@ -24,8 +24,9 @@ spring:
             refresh: true
           - dataId: redis.yml
             refresh: false
-          - dataId: mysql.yml
-            refresh: true
+            # 为了方便演示，就补充mysql.yml中读取
+#          - dataId: mysql.yml
+#            refresh: true
           - dataId: rabbitmq.yml
             refresh: false
         enabled: true
