--- a/lamp-seata/lamp-seata-at-producer-server/src/main/resources/application.yml
+++ b/lamp-seata/lamp-seata-at-producer-server/src/main/resources/application.yml
@@ -27,6 +27,7 @@ lamp:
     isNotWrite: false
     isBlockAttack: false
     isSeata: true
+    p6spy: true
     id-type: HU_TOOL
     hutoolId:
       workerId: 0
