--- a/lamp-seata/pom.xml
+++ b/lamp-seata/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>com.tangyh.lamp</groupId>
-        <artifactId>lamp-examples</artifactId>
+        <artifactId>lamp-samples</artifactId>
         <version>3.2.2</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
