--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.tangyh.lamp</groupId>
     <artifactId>lamp-samples</artifactId>
-    <version>3.2.5</version>
+    <version>3.3.0</version>
     <packaging>pom</packaging>
     <url>https://gitee.com/zuihou111/lamp-cloud</url>
     <name>${project.artifactId}</name>
@@ -25,8 +25,8 @@
     </modules>
 
     <properties>
-        <lamp-util.version>3.2.5</lamp-util.version>
-        <lamp-project.version>3.2.5</lamp-project.version>
+        <lamp-util.version>3.3.0</lamp-util.version>
+        <lamp-project.version>3.3.0</lamp-project.version>
         <seata.version>1.3.0</seata.version>
         <!-- jdk8 将这里改成 8 -->
         <java.version>11</java.version>
@@ -38,7 +38,7 @@
         <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
         <maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
         <dockerfile-maven-plugin.version>1.4.12</dockerfile-maven-plugin.version>
-        <spring-boot-maven-plugin.version>2.3.12.RELEASE</spring-boot-maven-plugin.version>
+        <spring-boot-maven-plugin.version>2.5.3</spring-boot-maven-plugin.version>
     </properties>
 
     <dependencyManagement>
